--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Main.Master
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Main.Master
@@ -6,23 +6,187 @@
 <head runat="server">
     <title></title>
     <link href="../Contents/Styles/Master.css" rel="stylesheet" type="text/css" />
-    <script src="../Scripts/jquery-1.6.2.min.js" type="text/javascript"></script>
+        
+    <!-- Core CSS - Include with every page -->
+    <link href="../Contents/Styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="../Contents/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
+
+    <!-- Page-Level Plugin CSS - Dashboard -->    
+    <link href="../Contents/Styles/bootstrap/plugins/morris/morris-0.4.3.min.css" rel="stylesheet" type="text/css" />
+    <link href="../Contents/Styles/bootstrap/plugins/timeline/timeline.css" rel="stylesheet"  type="text/css" />
+    <!-- SB Admin CSS - Include with every page -->
+    <link href="../Contents/Styles/bootstrap/sb-admin.css" rel="stylesheet" type="text/css" />
+    <link href="../Contents/Styles/jquery-ui.css" rel="stylesheet" type="text/css" />
+    
+    <!-- Core Scripts - Include with every page -->
+    <script src="../Scripts/jquery-2.0.3.js" type="text/javascript"></script>
+    <script src="../Scripts/js/bootstrap.js" type="text/javascript"></script>
+    <script src="../Scripts/js/plugins/metisMenu/jquery.metisMenu.js" type="text/javascript"></script>
     <script src="../Scripts/activity-indicator.js" type="text/javascript"></script>
+
+    <!-- Page-Level Plugin Scripts - Dashboard -->
+    <script src="../Scripts/js/plugins/morris/raphael-2.1.0.min.js" type="text/javascript"></script>
+    <script src="../Scripts/js/plugins/morris/morris.js" type="text/javascript"></script>
+    <script src="../Scripts/jquery-ui.min.js" type="text/javascript"></script>
+
+
+    <!-- Page-Level Demo Scripts - Dashboard - Use for reference -->
+    <script src="../Scripts/js/demo/dashboard-demo.js" type="text/javascript"></script>
+    
+    <!-- SB Admin Scripts - Include with every page -->
+    <script src="../Scripts/js/sb-admin.js" type="text/javascript"></script>
+    
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
-    
 </head>
 <body>
     <form id="form1" runat="server">   
-    <asp:ScriptManager ID="sm" runat="server" />
-    <div class="main-header">
-    </div>
-    <div class="main-contents">
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+    <asp:ScriptManager ID="sm" runat="server" />    
+    <div id="wrapper">
+
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="margin-bottom: 0">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#" style="font-size:20px;font-weight:bold;color:#428bca;margin-left:35px;"><img style="width:40px;margin-top:-10px;" src="../Contents/Images/toacs_logo.png" />TOACS</a>
+            </div>
+            <!-- /.navbar-header -->
+
+            <ul class="nav navbar-top-links navbar-right">
+                <!-- /.dropdown -->
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        </li>
+                    </ul>
+                    <!-- /.dropdown-user -->
+                </li>
+                <!-- /.dropdown -->
+            </ul>
+            <!-- /.navbar-top-links -->
+
+            <div class="navbar-default navbar-static-side" role="navigation">
+                <div class="sidebar-collapse">
+                    <ul class="nav" id="side-menu">
+                        <li class="sidebar-search">
+                            <div class="input-group custom-search-form">
+                            </div>
+                            <!-- /input-group -->
+                        </li>
+                        <li class="active">
+                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Planning<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level" style="font-size:12px;">
+                                <li>
+                                    <a href="#">Planing Schedule</a>
+                                </li>
+                                <li>
+                                    <a href="#">Planing Management</a>
+                                </li>
+                                <li>
+                                    <a href="#">Extrusion KANBAN</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-dashboard fa-fw"></i> Order Data<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level" style="font-size:12px;">
+                                
+                                <li>
+                                    <a href="#">Import Forcast Order</a>
+                                </li>
+                                <li>
+                                    <a href="#">Import Finishing Order</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-table fa-fw"></i> Stock Information<span class="fa arrow"></a>
+                             <ul class="nav nav-second-level" style="font-size:12px;">
+                                <li>
+                                    <a href="#">Stock Monitoring</a>
+                                </li>
+                                <li>
+                                    <a href="#">Standard Stock Control</a>
+                                </li>
+                                <li>
+                                    <a href="#">Extrusion Stock</a>
+                                </li>
+                                <li>
+                                    <a href="#">Finishing Stock</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-wrench fa-fw"></i> Master Data Management<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level"  style="font-size:12px;"> 
+                                 <li>
+                                    <a href="#">Part Master</a>
+                                </li>
+                                <li>
+                                    <a href="#">Model Master</a>
+                                </li>
+                                <li>
+                                    <a href="#">Model Structure</a>
+                                </li>
+                                <li>
+                                    <a href="#">EXT/FIN part</a>
+                                </li>
+                                <li>
+                                    <a href="#">Customer Master</a>
+                                </li>
+                                <li>
+                                    <a href="#">Operator </a>
+                                </li>
+                                <li>
+                                    <a href="#">Operator Group</a>
+                                </li>
+                                <li>
+                                    <a href="#">Line Master</a>
+                                </li>
+                                <li>
+                                    <a href="#">Losttime Master</a>
+                                </li>
+                            </ul>
+                            <!-- /.nav-second-level -->
+                        </li>
+                       
+                    </ul>
+                    <!-- /#side-menu -->
+                </div>
+                <!-- /.sidebar-collapse -->
+            </div>
+            <!-- /.navbar-static-side -->
+        </nav>
+
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header"  style="font-size:20px;font-wight:bold;margin-top: 5px;">Planning Schedule</h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+            <div class="row">
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         
-        </asp:ContentPlaceHolder>
-    </div>
-    <div class="main-footer">
+                </asp:ContentPlaceHolder>
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /#page-wrapper -->
+
     </div>
     </form>
 </body>
