--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Main.Master
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Main.Master
@@ -58,7 +58,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" style="font-size:20px;font-weight:bold;color:#428bca;margin-left:35px;"><img style="width:40px;margin-top:-10px;" src="../Contents/Images/toacs_logo.png" />TOACS</a>
+                <a class="navbar-brand" href="#" style="font-size:20px;font-weight:bold;color:#428bca;margin-left:35px;"><img style="width:40px;margin-top:-10px;" src="../Contents/Images/toacs_logo.png" />TOACS (Thailand) Co,Ltd</a>
             </div>
             <!-- /.navbar-header -->
 
