--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Contents/Styles/bootstrap/sb-admin.css
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Contents/Styles/bootstrap/sb-admin.css
@@ -32,7 +32,7 @@
         position: inherit;
         margin: 0 0 0 250px;
         padding: 0 30px;
-        min-height: 1300px;
+        min-height: 585px;
         border-left: 1px solid #e7e7e7;
     }
 }
@@ -312,4 +312,14 @@ table.dataTable thead .sorting:after {
 
 .show-grid {
     margin: 15px 0;
+}
+
+
+.nav li.active
+{
+    font-weight:bold;
+}
+.nav li.active .nav-second-level
+{
+    font-weight:normal;
 }
