--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Site1.Master
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Site1.Master
@@ -38,7 +38,7 @@
     <script src="../Scripts/jquery.easyui.min.js" type="text/javascript"></script>
     <script src="../Scripts/activity-indicator.js" type="text/javascript"></script>
 
-    <style >
+    <style type="text/css" >
          .menu-bar
          {
              width:605px;
@@ -151,11 +151,11 @@
              
                 <div class="menu-bar">
                     <ul>
-		                <li><a href="#">Planning</a>
+		                <li><a href="">Planning</a>
 			                <ul>
-				                <li><a href="#">Planning Schedule</a></li>
+				                <li><a href="../Kanban/Schedule.aspx">Planning Schedule</a></li>
 				                <li><a href="#">Planning Management</a></li>
-				                <li><a href="#">Extrusion KANBAN</a></li>
+				                <li><a href="../Kanban/">Extrusion KANBAN</a></li>
 			                </ul>
                         </li>
 		                <li><a href="#">Order Data</a>
