--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Contents/Styles/Master.css
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Contents/Styles/Master.css
@@ -16,3 +16,99 @@
     height:120px;    
     background:#cccccc;
 }
+
+.menu-bar
+{
+    width:605px;
+    margin-top: 20px;
+position: fixed;
+margin-left: 250px;
+}
+.menu-bar ul ul {
+	display: none;
+}
+
+.menu-bar ul li:hover > ul {
+	display: block;
+}
+.menu-bar ul {
+	background: #efefef; 
+	background: linear-gradient(top, #87BFF3 0%, #5C7CE0 100%);  
+	background: -moz-linear-gradient(top, #87BFF3 0%, #5C7CE0 100%); 
+	background: -webkit-linear-gradient(top, #87BFF3 0%,#5C7CE0 100%); 
+	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+	padding: 0 20px;
+	border-radius: 10px;  
+	list-style: none;
+	position: relative;
+	display: inline-table;
+}
+.menu-bar ul:after {
+	content: ""; clear: both; display: block;
+}
+.menu-bar  ul li {
+	float: left;
+	border-right: solid 1px #C9E1F6;
+}
+.menu-bar  ul li:hover {
+	background: linear-gradient(top, #9ECEFC 0%, #7A94E6 100%);  
+	background: -moz-linear-gradient(top, #9ECEFC 0%, #7A94E6 100%); 
+	background: -webkit-linear-gradient(top, #9ECEFC 0%,#7A94E6 100%)
+}
+.menu-bar  ul li:hover a {
+	color: #fff;
+}
+.menu-bar  ul li a {
+	display: block; 
+	padding: 12px 30px;
+	color: #FFFFFF; 
+	text-decoration: none;
+}
+.menu-bar ul ul {
+	background: #7A94E6;
+	border-radius: 0px;
+	padding: 0;
+	position: absolute; 
+	top: 100%;
+}
+.menu-bar ul ul li {
+	float: none; 
+	border-top: 1px solid #C9E1F6;
+	position: relative;
+	font-size:12px;
+}
+.menu-bar ul ul li a {
+	padding: 11px 34px;
+	color: #fff;
+}	
+.menu-bar ul ul li a:hover {
+	background: #757575;
+}
+		
+.main-content
+{
+	margin-right: auto;
+    margin-left: auto;
+    width:100%;
+    background:white;
+    margin-top: 45px;
+}
+		
+.footer
+{ 
+    background:#F5F3F3;
+    display: block;
+    text-align: center;
+    width: 100%;
+    border-top: solid #cccccc 1px;
+    bottom: 0;
+    margin-top: 15px;
+    position: fixed;
+}
+.footer span
+{
+	float:right;
+	margin-right:100px;
+	margin-top:10px;
+}
+html,body { height: 100%; margin: 0px; padding: 0px; }
