--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Contents/Styles/jquery.Gantt.css
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Contents/Styles/jquery.Gantt.css
@@ -71,12 +71,12 @@
 }
 
 .fn-gantt .leftPanel .name {
-    width: 110px;
+    width: 100%;
     font-weight: bold;
 }
 
 .fn-gantt .leftPanel .desc {
-    width: 115px;
+    width: 100%;
 }
 
 .fn-gantt .leftPanel .fn-wide, .fn-gantt .leftPanel .fn-wide .fn-label {
