--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Site1.Master
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Site1.Master
@@ -37,98 +37,6 @@
     <link href="../Contents/Styles/themes/icon.css" rel="stylesheet" type="text/css" />
     <script src="../Scripts/jquery.easyui.min.js" type="text/javascript"></script>
     <script src="../Scripts/activity-indicator.js" type="text/javascript"></script>
-
-    <style type="text/css" >
-         .menu-bar
-         {
-             width:605px;
-             margin-top: 20px;
-            position: fixed;
-            margin-left: 250px;
-         }
-        .menu-bar ul ul {
-	        display: none;
-        }
-
-	    .menu-bar ul li:hover > ul {
-		    display: block;
-	    }
-	    .menu-bar ul {
-	        background: #efefef; 
-	        background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
-	        background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
-	        background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
-	        box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
-	        padding: 0 20px;
-	        border-radius: 10px;  
-	        list-style: none;
-	        position: relative;
-	        display: inline-table;
-        }
-	    .menu-bar ul:after {
-		    content: ""; clear: both; display: block;
-	    }
-	    .menu-bar  ul li {
-	        float: left;
-	        border-right: solid 1px #AAAAAA;
-        }
-	    .menu-bar  ul li:hover {
-		    background: #4b545f;
-		    background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
-		    background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
-		    background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
-	    }
-		.menu-bar  ul li:hover a {
-			color: #fff;
-		}
-	    .menu-bar  ul li a {
-		    display: block; padding: 12px 30px;
-		    color: #757575; text-decoration: none;
-	    }
-	    .menu-bar ul ul {
-	        background: #5f6975; border-radius: 0px; padding: 0;
-	        position: absolute; top: 100%;
-        }
-	    .menu-bar ul ul li {
-		    float: none; 
-		    border-top: 1px solid #6b727c;
-		    border-bottom: 1px solid #575f6a;
-		    position: relative;
-		    font-size:12px;
-	    }
-		.menu-bar ul ul li a {
-			padding: 15px 40px;
-			color: #fff;
-		}	
-		.menu-bar ul ul li a:hover {
-			background: #4b545f;
-		}
-		
-		.main-content
-		{
-		    margin-right: auto;
-            margin-left: auto;
-            width:100%;
-            min-height: 100vh;
-            background:white;
-            margin-top: 97px;
-		}
-		
-		.footer
-		{
-		    height: 30px;
-            border-top: solid #cccccc 1px;
-            bottom:0; 
-            background-color: #f8f8f8;
-		}
-		.footer span
-		{
-		    float:right;
-		    margin-right:100px;
-		    margin-top:10px;
-		}
-		 html,body { height: 100%; margin: 0px; padding: 0px; }
-    </style>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -153,7 +61,7 @@
                     <ul>
 		                <li><a href="">Planning</a>
 			                <ul>
-				                <li><a href="../Kanban/Schedule.aspx">Planning Schedule</a></li>
+				                <li><a href="../Kanban/Schedule2.aspx">Planning Schedule</a></li>
 				                <li><a href="#">Planning Management</a></li>
 				                <li><a href="../Kanban/">Extrusion KANBAN</a></li>
 			                </ul>
@@ -240,11 +148,10 @@
         
             </asp:ContentPlaceHolder>
         </div>
-        <div class="footer">
-            <span >Copyright  TOACS Co,Ltd. 2014</span>
-        </div>
+    </div>    
+    <div class="footer">
+        <span >Copyright  TOACS Co,Ltd. 2014</span>
     </div>
-
     </form>
 </body>
 </html>
