--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Production.Master
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Production.Master
@@ -40,11 +40,11 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body style="background:#ffffff;">
+<body style="background:#F3F3F3;">
     <form id="form1" runat="server" >
     <asp:ScriptManager ID="sm" runat="server" />    
     <div>
-       <nav class="navbar navbar-fixed-top navbar-default" role="navigation" style="padding-top: 20px;padding-bottom: 15px;">
+       <nav class="navbar navbar-fixed-top navbar-default" role="navigation" style="padding-top: 20px;padding-bottom: 15px;background:#BECCDD;border-bottom: solid 4px white;">
             <div class="container" style="height:70px;width: 940px;margin-left: auto;margin-right: auto;">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
