--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Production.Master
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Template/Production.Master
@@ -5,7 +5,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title></title>
-    <link href="../Contents/Styles/Master.css" rel="stylesheet" type="text/css" />
         
     <!-- Core CSS - Include with every page -->
     <link href="../Contents/Styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -18,6 +17,8 @@
     <link href="../Contents/Styles/bootstrap/sb-admin.css" rel="stylesheet" type="text/css" />
     <link href="../Contents/Styles/jquery-ui.css" rel="stylesheet" type="text/css" />
     
+    <link href="../Contents/Styles/Master.css" rel="stylesheet" type="text/css" />
+
     <!-- Core Scripts - Include with every page -->
     <script src="../Scripts/jquery-1.9.0.js" type="text/javascript"></script>
     <script src="../Scripts/js/bootstrap.js" type="text/javascript"></script>
@@ -83,16 +84,14 @@
             <!-- /.container -->
         </nav>  
     </div>    
-    <div id="wrapper">   
+    <div id="wrapper" style="margin-top:130px;">   
         <div class="main-content" style="width:980px;" >
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         
             </asp:ContentPlaceHolder>
         </div>
     </div>    
-    <div class="footer">
-        <span >Copyright  TOACS Co,Ltd. 2014</span>
-    </div>
+
     </form>
 </body>
 </html>
