--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Contents/Styles/Master.css
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Contents/Styles/Master.css
@@ -430,7 +430,11 @@ tr .datagrid-cell {
     width: 100%;
     height: 70px;
 }
-
+.filter-display
+{
+    float:left;   
+    height: auto; 
+}
 .production-scan-box .separator-text
 {
     position: fixed;
@@ -548,3 +552,48 @@ h3
     border-color: transparent transparent transparent #BDCEDD;; 
 }
 /* step */
+
+
+
+.filter-display{
+    display:none;
+    margin-left:auto;
+    margin-right:auto;
+    width:930px;
+    border-radius:10px;
+    background:#FAFAFA;
+    margin-bottom:20px;
+}
+
+/*data grid*/
+tr .datagrid-cell
+{
+    height:25px;
+}
+.fancy-button:hover {
+    background: url("../Images/ui-bg_highlight-hard_75_dadada_1x100.png") repeat-x scroll 50% 50% #CCCCCC;
+}
+a:hover {
+    text-decoration: none;
+}
+.fancy-button {
+    border: 2px solid #E1E1E1;
+    background: url("../Images/ui-bg_highlight-hard_75_e6e6e6_1x100.png") repeat-x scroll 50% 50% #D3CDCD;
+    padding: 0.4em 1em;
+    text-decoration: none;
+    border-radius: 4px;
+    color: #555555;
+    font-weight: normal;
+    font-size: 12px;
+    position: relative;
+    cursor: pointer;
+}
+        
+.actived{
+    background:#92A7E7;
+    color:#ffffff;
+}
+.actived:hover{
+    background:#5C7CE0;
+    color:#ffffff;
+}
